--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     </form>
     <p id="objetos"></p>       
     <br>
+    <div id="Cargando" style="display:none;">Cargando...</div>
     <div id="grilla"></div>
-    <div id="paginacion">      
-    </div>
+    <div id="paginacion"></div>
    <p id="numeroPag"></p>
 
 <!-- Modal -->
@@ -40,7 +40,6 @@
 </div>
 
     <script  src="Script.js"></script>
-    <script src ="app.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
