Update Estilos, Script, index

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <br>
     <div id="Cargando" style="display:none;">Cargando...</div>
     <div id="grilla"></div>
+    <div id="tooltip"></div>
     <div id="paginacion"></div>
    <p id="numeroPag"></p>
 
