--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
    <br>
     <form id="form">
     <div id="filtros">
+        <button type="reset" id="buscar">Reiniciar</button> 
+
         <input type="text" id="plabraclave" placeholder="Palabra calve...">  
 
         <select name="Departamentos" id="Departamentos"></select>
